[package]
name = "iracingsdk"
version = "0.1.0"
authors = ["Rasmus Larsen <doctorherbstein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.4"
winapi = { version = "0.3.9", features = [
    "basetsd",
    "errhandlingapi",
    "handleapi",
    "memoryapi",
    "minwindef",
    "std",
    "synchapi",
    "winbase",
    "winnt",
] }
